feat: change eslintrc

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Бронирование отелей"
     />
-    <title>React App</title>
+    <title>Travel</title>
   </head>
   <body>
     <div id="root"></div>
