--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Бронирование отелей"
-    />
-    <title>Travel</title>
+    <meta name="description" content="Бронирование отелей" />
+    <title>Hotels</title>
   </head>
   <body>
     <div id="root"></div>
